[gd_scene load_steps=8 format=3 uid="uid://yy1oasfbf1u3"]

[ext_resource type="Script" path="res://gameover/gameover.gd" id="1_kyh0q"]
[ext_resource type="FontFile" uid="uid://dskq0esxc2a8w" path="res://ttf/xspace-xspace-400.ttf" id="2_d532l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kxeof"]
bg_color = Color(0.291274, 0.3841, 0.978579, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="LabelSettings" id="LabelSettings_nor8d"]
font_size = 50
shadow_size = 5

[sub_resource type="SystemFont" id="SystemFont_238o2"]

[sub_resource type="LabelSettings" id="LabelSettings_q1cry"]
font = SubResource("SystemFont_238o2")
font_size = 40
shadow_size = 5

[sub_resource type="LabelSettings" id="LabelSettings_swtar"]
font = SubResource("SystemFont_238o2")
font_size = 40
shadow_size = 5

[node name="Gameover" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kyh0q")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = -123.0
offset_right = 741.0
offset_bottom = 297.0
mouse_filter = 1
color = Color(0, 0, 0, 0.494118)

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = -8.0
offset_top = -130.0
offset_right = 787.0
offset_bottom = 437.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_kxeof")

[node name="GameOver" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 104.0
offset_top = 40.0
offset_right = 654.0
offset_bottom = 146.0
theme_override_fonts/font = ExtResource("2_d532l")
text = "Game Over"
label_settings = SubResource("LabelSettings_nor8d")
horizontal_alignment = 1

[node name="Score" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 108.0
offset_top = 144.0
offset_right = 658.0
offset_bottom = 250.0
theme_override_fonts/font = ExtResource("2_d532l")
text = "Score: 00000"
label_settings = SubResource("LabelSettings_q1cry")
horizontal_alignment = 1

[node name="HighScore" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 108.0
offset_top = 242.0
offset_right = 658.0
offset_bottom = 348.0
theme_override_fonts/font = ExtResource("2_d532l")
text = "High Score: 00000"
label_settings = SubResource("LabelSettings_swtar")
horizontal_alignment = 1

[node name="button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 232.0
offset_top = 322.0
offset_right = 537.0
offset_bottom = 398.0
mouse_filter = 1
mouse_default_cursor_shape = 4
theme_override_fonts/font = ExtResource("2_d532l")
theme_override_font_sizes/font_size = 50
action_mode = 0
text = "RETRY"

[node name="logout" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 196.0
offset_top = 420.0
offset_right = 566.0
offset_bottom = 496.0
mouse_filter = 1
mouse_default_cursor_shape = 4
theme_override_fonts/font = ExtResource("2_d532l")
theme_override_font_sizes/font_size = 50
action_mode = 0
text = "LOGOUT
"

[connection signal="pressed" from="Panel/button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/logout" to="." method="_on_logout_pressed"]
